[package]
name = "bulletproofs_gadgets"
version = "0.1.0"
authors = ["Marc Kloter"]
build = "build.rs"

[dependencies]
curve25519-dalek = { version = "1", features = ["serde"] }
rand = "0.6"
merlin = "1.1.0"
pkcs7 = "1.0.0"
hex = "0.3.2"
regex = "1.1.9"
libmath = "0.2.1"
lalrpop-util = "0.17.1"

[dependencies.bulletproofs]
git = "https://github.com/MarcKloter/bulletproofs"
branch = "develop"
features = ["yoloproofs", "avx2_backend"]

[build-dependencies]
lalrpop = "0.17.1"

[[bin]]
name = "prover"
path = "src/bin/prover.rs"

[[bin]]
name = "verifier"
path = "src/bin/verifier.rs"

[[test]]
name = "combine_gadgets"